# Proofrail

./: ACCEPTANCE_MODEL.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PRODUCT.md  README.md  pyproject.toml  setup.cfg
.codex/skills/proofrail-acceptance/: SKILL.md
.codex/skills/proofrail-autonomous-step/: SKILL.md
.codex/skills/proofrail-scope-escalation/: SKILL.md
.codex/skills/proofrail-step-preflight/: SKILL.md
.github/actions/proofrail-verify/: action.yml  run.py
.github/workflows/: proofrail-fixtures.yml  publish-pypi.yml
.proofrail/: claim.md  policy.yml
contracts/: README.md  step-13.yml  step-14.yml  step-15.yml  step-16.yml  step-17.yml  step-contract.schema.json
docs/: CLAUDE_CODE.md  PILOT_GUIDE.md  PROJECT_STATUS.md  QUICKSTART.md  RELEASING.md  WORKFLOW.md  claude-code-instructions.md
docs/examples/: partial-workflow-fix.md
docs/founder-evidence/: 001-partial-workflow-fix.md
docs/templates/: AUTONOMOUS_STEP_PROMPT.md  STEP_ACCEPTANCE_CHECKLIST.md
schemas/: README.md  case.schema.json
scripts/: build_release_artifacts.py  proofrail_step_preflight.py
src/proofrail_verifier/: __init__.py  __main__.py  artifacts.py  change_verification.py  claim_checking.py  claim_drafting.py  claim_file.py  cli.py  evaluation.py  git_source.py  loading.py  policy.py  policy_rendering.py  preparation.py  preparation_errors.py  rendering.py  schema_validation.py
tests/action/: test_action.py
tests/case_preparation/: test_prepare_case.py
tests/case_preparation/claims/: partial-workflow-fix.md
tests/claim_checking/: test_check_claims.py
tests/claim_drafting/: test_draft_claims.py
tests/cli/: test_cli.py
tests/docs/: test_public_documentation.py
tests/end_to_end/: test_draft_claims_action.py  test_verify_change.py
tests/fixtures/001-partial-workflow-fix/: case.json  intended.patch  validate.sh
tests/fixtures/002-incapable-validation-command/: case.json  validate.sh
tests/packaging/: test_distribution.py
tests/policy/: test_policy.py
tests/preflight/: test_step_preflight.py
tests/schema/: validate-fixture-001.py  validate-fixture-002.py
tests/skills/: test_scope_escalation_skill.py
tests/verifier/: test_fixture_001.py  test_fixture_002.py
(+6 files in other folders)
