[metadata]
name = proofrail-verifier
version = attr: proofrail_verifier.__version__
description = Deterministic offline acceptance verification for supported Proofrail cases.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = false
zip_safe = false

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    proofrail = proofrail_verifier.cli:main

[options.data_files]
proofrail_verifier =
    schemas/case.schema.json
proofrail_verifier/docs =
    CHANGELOG.md
    docs/PROJECT_STATUS.md
    docs/QUICKSTART.md
    docs/RELEASING.md
