[metadata]
name = proofrail
version = attr: proofrail_verifier.__version__
description = Deterministic offline acceptance verification for supported Proofrail cases.
long_description = file: README.md
long_description_content_type = text/markdown
author = DrDeese
author_email = 144551499+DrDeese@users.noreply.github.com
maintainer = DrDeese
maintainer_email = 144551499+DrDeese@users.noreply.github.com
url = https://github.com/DrDeese/Proofrail
project_urls =
    Source = https://github.com/DrDeese/Proofrail
    Issues = https://github.com/DrDeese/Proofrail/issues
    Documentation = https://github.com/DrDeese/Proofrail#readme
license = Apache-2.0
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = false
zip_safe = false

[options.packages.find]
where = src

[options.package_data]
proofrail_verifier =
    demo/001-partial-workflow-fix/actual.patch
    demo/001-partial-workflow-fix/case.json
    demo/001-partial-workflow-fix/initial/.github/workflows/ci.yml
    demo/001-partial-workflow-fix/initial/bun.lock
    demo/001-partial-workflow-fix/initial/bun.lockb

[options.entry_points]
console_scripts =
    proofrail = proofrail_verifier.cli:main

[options.data_files]
proofrail_verifier =
    schemas/case.schema.json
proofrail_verifier/docs =
    CHANGELOG.md
    docs/PROJECT_STATUS.md
    docs/QUICKSTART.md
    docs/RELEASING.md
